--- a/public/index.html
+++ b/public/index.html
@@ -177,191 +177,35 @@
                         </div>
             </div>
         </div>
-        <!-- <img src="images/background/header-top-left.png" alt="background"
-            class="js-show-fadeInLeft absolute top-0 left-0 w-[150px] h-[160px] sm:w-[300px] sm:h-[310px]"> -->
+        <!-- <img src="images/background/buket-bunga-1.png" alt="bunga"
+            class="js-show-fadeInLeft absolute top-0 -left-4"> -->
     </section>
 
-    <section class="isi-undangan hidden js-show-fadeIn bg-brown-200 py-6 sm:py-14 relative">
-        <div class="container max-w-screen-xl mx-auto px-4 m:px-20 relative">
-            <div class="columns-1">
-                <div class="p-0.5 border-2 border-grey-100 rounded-20 sm:rounded-50">
-                    <div class="p-3 sm:p-5 border-2 border-grey-100 rounded-20 sm:rounded-50 text-center bg-brown-250">
-                        <h2 class="js-show-fadeIn font-nautigal text-5xl text-brown-500 mb-3.5 italic mt-5">
-                            Mempelai
-                        </h2>
-                        <p class="js-show-fadeIn font-cormorant text-base sm:text-normal text-brown-500">
-                            Dengan segala kerendahan hati dan dengan ucapan syukur atas karunia Tuhan, kami hendak
-                            menyampaikan kabar bahagia pernikahan kami :
-                        </p>
-                        <div class="columns-1 sm:columns-2 mt-4 sm:mt-8">
-                            <div class="mb-6 js-show-fadeInLeft">
-                                <img src="images/photos/Foto-Profil-Perempuan-Ana-Dilan.jpg"
-                                    class="js-show-fadeInLeft mb-4 rounded-200 w-8/12 sm:w-6/12 mx-auto" alt="Ana">
-                                <h5 class="js-show-fadeIn font-grand text-2xl sm:text-4xl text-brown-50 italic mb-1">
-                                    Dian Fitriana Dewi
-                                </h5>
-                                <img src="images/border/border-flower-2.png" class="js-show-zoomIn w-5/12 mx-auto mb-1" alt="">
-                                <p class="js-show-fadeIn font-cormorant text-base sm:text-normal text-brown-500 sm:mb-2 font-semibold">
-                                    Putri dari:
-                                </p>
-                                <p class="js-show-fadeIn font-cormorant text-base sm:text-normal text-brown-500 mb-3 sm:mb-5 ">
-                                    Bapak Untung Setiono, S.Pd <br>
-                                    & <br>
-                                    Ibu Sri Ngesti Utami
-                                </p>
-                                <a href="#" target="_blank"
-                                    class="js-show-fadeInUp flex items-center justify-center w-9 h-9 bg-brown-500 rounded-full text-white m-auto">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-
-                            </div>
-                            <div class="mb-6 js-show-fadeInRight">
-                                <img src="images/photos/Foto-Profil-Laki-Laki-Ana-Dilan.jpg"
-                                    class=" js-show-fadeInRight mb-4 rounded-200 w-8/12 sm:w-6/12 mx-auto" alt="Dilan">
-                                <h5 class=" js-show-fadeIn font-grand text-2xl sm:text-4xl text-brown-50 italic mb-1">
-                                    Aldilan Noorman Sissandy
-                                </h5>
-                                <img src="images/border/border-flower-2.png" class=" js-show-zoomIn w-5/12 mx-auto mb-1" alt="">
-                                <p class=" js-show-fadeIn font-cormorant text-base sm:text-normal text-brown-500 sm:mb-2 font-semibold">
-                                    Putra dari:
-                                </p>
-                                <p class=" js-show-fadeIn font-cormorant text-base sm:text-normal text-brown-500 mb-3 sm:mb-5 ">
-                                    Bapak Drs. Siswo Irianto, M.M <br>
-                                    & <br>
-                                    Ibu Susanti
-                                </p>
-                                <a href="#" target="_blank"
-                                    class="js-show-fadeInUp flex items-center justify-center w-9 h-9 bg-brown-500 rounded-full text-white m-auto">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            </div>
-                        </div>
+    <section class="isi-undangan js-show-fadeIn w-full h-screen sm:h-[750px] relative">
+        <div class="absolute top-0 left-0 w-full h-screen sm:h-[750px] object-cover bg-no-repeat bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1661347332552-3eb71bb84d01?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');"></div>
+        <div class="container relative flex justify-center items-end mx-auto h-full">
+            <div class="columns-1 pb-10">
+                <div class="js-show-fadeInUp flex">
+                    <div class="mx-3 bg-brown-100 py-2 sm:py-5 w-18 sm:w-28 text-center rounded-full">
+                        <div class="font-quicksand text-white text-3xl sm:text-5xl" id="days">00</div>
+                        <div class="font-quicksand text-sm sm:text-base text-white">Days</div>
+                    </div>
+                    <div class="mx-3 bg-brown-100 py-2 sm:py-5 w-18 sm:w-28 text-center rounded-full">
+                        <div class="font-quicksand text-white text-3xl sm:text-5xl" id="hours">00</div>
+                        <div class="font-quicksand text-sm sm:text-base text-white">Hours</div>
+                    </div>
+                    <div class="mx-3 bg-brown-100 py-2 sm:py-5 w-18 sm:w-28 text-center rounded-full">
+                        <div class="font-quicksand text-white text-3xl sm:text-5xl" id="minutes">00</div>
+                        <div class="font-quicksand text-sm sm:text-base text-white">Minutes</div>
+                    </div>
+                    <div class="mx-3 bg-brown-100 py-2 sm:py-5 w-18 sm:w-28 text-center rounded-full">
+                        <div class="font-quicksand text-white text-3xl sm:text-5xl" id="seconds">00</div>
+                        <div class="font-quicksand text-sm sm:text-base text-white">Seconds</div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class=" js-show-fadeInLeft absolute bottom-0 left-0 ">
-            <img src="images/background/header-bottom-right.png" alt="background"
-                class="-scale-x-100 w-[150px] h-[160px] sm:w-[300px] sm:h-[310px]">
-        </div>
     </section>
-
-    <div class="isi-undangan hidden js-show-fadeIn">
-        <section class="bg-brown-200 py-6 sm:py-10 w-full relative">
-            <div class="absolute top-0 left-0 w-full h-full object-cover bg-no-repeat bg-cover bg-center opacity-30"
-                style="background-image: url(./images/background/header.jpg);"></div>
-            <div class="container max-w-screen-xl mx-auto px-4 m:px-20 relative">
-                <div class="columns-1 md:columns-2">
-                    <div class="js-show-fadeInUp relative z-10 sm:z-auto">
-                        <img src="images/photos/Foto-Counting-Days-Ana-Dilan.jpg" class="rounded-3xl" alt="Photo">
-                        <div class="absolute bottom-5 left-2/4 -translate-x-2/4 flex">
-                            <div class="mx-1 bg-brown-300 py-2 sm:py-5 w-18 sm:w-28 text-center"
-                                style="border-radius: 10px 40px 10px 40px;">
-                                <div class="font-quicksand text-white text-3xl sm:text-5xl" id="days">00</div>
-                                <div class="font-quicksand text-sm sm:text-base text-white">Days</div>
-                            </div>
-                            <div class="mx-1 bg-brown-300 py-2 sm:py-5 w-18 sm:w-28 text-center"
-                                style="border-radius: 10px 40px 10px 40px;">
-                                <div class="font-quicksand text-white text-3xl sm:text-5xl" id="hours">00</div>
-                                <div class="font-quicksand text-sm sm:text-base text-white">Hours</div>
-                            </div>
-                            <div class="mx-1 bg-brown-300 py-2 sm:py-5 w-18 sm:w-28 text-center"
-                                style="border-radius: 10px 40px 10px 40px;">
-                                <div class="font-quicksand text-white text-3xl sm:text-5xl" id="minutes">00</div>
-                                <div class="font-quicksand text-sm sm:text-base text-white">Minutes</div>
-                            </div>
-                            <div class="mx-1 bg-brown-300 py-2 sm:py-5 w-18 sm:w-28 text-center"
-                                style="border-radius: 10px 40px 10px 40px;">
-                                <div class="font-quicksand text-white text-3xl sm:text-5xl" id="seconds">00</div>
-                                <div class="font-quicksand text-sm sm:text-base text-white">Seconds</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="js-show-fadeInUp relative -mt-10 sm:pt-14">
-                        <div class="sm:-ml-10 p-0.5 border-2 border-brown-50 rounded-3xl h-full bg-white">
-                            <div
-                                class="p-5 border-2 border-brown-50 rounded-3xl bg-white relative overflow-hidden  h-full">
-                                <div class="h-10 sm:h-20"></div>
-                                <form action="">
-                                    <div class="text-center">
-                                        <h1 class="font-nautigal text-5xl sm:text-6xl text-brown-500 italic mb-7">
-                                            Reservasi
-                                        </h1>
-                                        <div class="h-px w-20 mx-auto bg-black-500 mb-6"></div>
-                                        <p class="font-cormorant text-base sm:text-normal text-brown-500 mb-5 leading-6 sm:leading-8">
-                                            Untuk mencegah penyebaran virus COVID-19, kami mengharapkan konfirmasi
-                                            kedatangan Anda pada form berikut:
-                                        </p>
-                                    </div>
-                                    <div class="input-group font-cormorant text-base text-brown-500 mb-3">
-                                        <label for="nama">
-                                            Nama<sup class="text-rose-500">*</sup>
-                                        </label>
-                                        <input type="text" name="nama" id="nama"
-                                            class="block w-full bg-white rounded-3xl border border-neutral-400 text-neutral-600 mt-1 py-2 px-4 outline-none focus:border-neutral-600"
-                                            placeholder="Nama" required>
-                                    </div>
-                                    <div class="input-group font-cormorant text-base text-brown-500 mb-3">
-                                        <label for="ucapan">
-                                            Ucapan dan Doa<sup class="text-rose-500">*</sup>
-                                        </label>
-                                        <textarea name="ucapan" id="ucapan"
-                                            class="block w-full bg-white rounded-3xl border border-neutral-400 text-neutral-600 mt-1 py-2 px-4 outline-none focus:border-neutral-600"
-                                            placeholder="Ucapan dan Doa" rows="3" required></textarea>
-                                    </div>
-                                    <div class="input-group font-cormorant text-base text-brown-500 mb-3">
-                                        <label for="kehadiran">
-                                            Apakah Anda berkenan hadir?<sup class="text-rose-500">*</sup>
-                                        </label>
-                                        <div class="flex mt-2">
-                                            <div class="form-check mr-4">
-                                                <input class="form-check-input" type="radio" name="kehadiran"
-                                                    id="kehadiran1" value="hadir" required>
-                                                <label class="cursor-pointer" for="kehadiran1">
-                                                    Hadir
-                                                </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="kehadiran"
-                                                    id="kehadiran2" value="tidak">
-                                                <label class="cursor-pointer" for="kehadiran2">
-                                                    Tidak Hadir
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="input-group font-cormorant text-base text-brown-500 mb-5">
-                                        <label for="jumlahTamu">
-                                            Jumlah Tamu
-                                        </label>
-                                        <div class="flex mt-2">
-                                            <div class="form-check mr-4">
-                                                <input class="form-check-input" type="radio" name="tamu" id="tamu1"
-                                                    value="1" required>
-                                                <label class="cursor-pointer" for="tamu1">
-                                                    1
-                                                </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="tamu" id="tamu2"
-                                                    value="2">
-                                                <label class="cursor-pointer" for="tamu2">
-                                                    2
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button type="submit"
-                                        class="font-cormorant text-base text-white bg-brown-500 py-2 rounded-3xl w-full">Kirim</button>
-                                </form>
-                                <div class="sm:h-20"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
 
     <section class="isi-undangan hidden js-show-fadeIn bg-brown-200 py-6 sm:py-14">
         <div class="container max-w-screen-xl mx-auto px-4 m:px-20">
@@ -824,7 +668,7 @@
 
 
         // COUNTDOWN
-        var countDownDate = new Date("August 17, 2022 00:00:00").getTime();
+        var countDownDate = new Date("September 22, 2022 00:00:00").getTime();
 
         var x = setInterval(function () {
             var now = new Date().getTime();
