--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <section class="cover-undangan w-full h-screen flex items-center justify-center relative" id="bukaUndangan">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background-simple.png);"></div>
+            style="background-image: url(./images/background/background-simple.jpg);"></div>
         <!-- <img src="images/background/header-1.png" alt="background"
             class="absolute top-0 left-0 w-[200px] h-[210px] sm:w-[300px] sm:h-[310px]">
         <img src="images/background/header-2.png" alt="background"
@@ -56,7 +56,7 @@
 
     <section class="isi-undangan h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center -scale-y-100"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl relative flex justify-center mx-auto ">
             <div class="columns-1 sm:w-2/4">
                 <div class="text-center">
@@ -78,7 +78,7 @@
 
     <section class="isi-undangan h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="columns-1">
                 <div class="text-center">
@@ -102,7 +102,7 @@
 
     <section class="isi-undangan h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center -scale-y-100"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl relative flex justify-center mx-auto ">
             <div class="grid grid-cols-2 gap-2">
                 <div class="left">
@@ -150,7 +150,7 @@
 
     <section class="isi-undangan h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="columns-1">
                 <div class="text-center bg-grey-50 rounded-3xl p-20">
@@ -228,7 +228,7 @@
 
     <section class="isi-undangan flex h-full items-center justify-center relative py-32">
         <div class="absolute top-0 left-0 w-full h-full bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="columns-1 mb-12">
                 <div class="relative text-center">
@@ -290,7 +290,7 @@
 
     <section class="isi-undangan h-screen flex items-center justify-center relative py-36">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="columns-1">
                 <div class="text-center mb-14">
@@ -348,7 +348,7 @@
 
     <section class="isi-undangan js-show-fadeIn py-6 sm:py-10 w-full h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative bg-grey-50 rounded-3xl p-10">
             <div class="grid grid-cols-2 gap-6">
                 <div class="js-show-fadeInUp relative">
@@ -502,7 +502,7 @@
 
     <section class="isi-undangan js-show-fadeIn py-6 sm:py-10 w-full h-screen flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center -scale-y-100"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="columns-1 bg-grey-50 rounded-3xl p-10 mb-20">
                 <div class="text-center">
@@ -566,7 +566,7 @@
 
     <section class="isi-undangan w-full h-[500px] flex items-center justify-center relative">
         <div class="absolute top-0 left-0 w-full h-[500px] bg-no-repeat bg-cover bg-top"
-            style="background-image: url(./images/background/background.png);"></div>
+            style="background-image: url(./images/background/background.jpg);"></div>
         <div class="container max-w-screen-xl relative flex justify-center mx-auto ">
             <div class="columns-1 sm:w-2/4">
                 <div>
