--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,15 @@
 
 <body class="">
 
-    <section class="cover-undangan w-full h-screen flex items-center justify-center relative" id="bukaUndangan">
+    <section class="cover-undangan w-full h-screen flex items-center justify-center relative overflow-hidden" id="bukaUndangan">
         <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-            style="background-image: url(./images/background/background-simple.jpg);"></div>
-        <!-- <img src="images/background/header-1.png" alt="background"
-            class="absolute top-0 left-0 w-[200px] h-[210px] sm:w-[300px] sm:h-[310px]">
-        <img src="images/background/header-2.png" alt="background"
-            class="absolute bottom-0 right-0 w-[200px] h-[210px] sm:w-[300px] sm:h-[310px]"> -->
+            style="background-image: url(./images/background/background.jpg);"></div>
+        <img src="images/background/header-1.png" alt="bunga"
+            class="absolute -bottom-32 sm:-bottom-[150px] -left-40 sm:-left-[200px] w-[300px] sm:w-[600px]">
+        <img src="images/background/header-2.png" alt="bunga"
+            class="absolute -bottom-[70px] sm:-bottom-[150px] -right-[70px] sm:-right-[150px] w-[200px] sm:w-[500px]">
+        <img src="images/kupu-kupu/kupu3.gif" alt="kupu-kupu"
+            class="absolute top-[80px] sm:top-1/4 sm:-translate-y-1/4 left-2/4 -translate-x-2/4 sm:left-1/4 sm:-translate-x-1/4 w-[180px] sm:w-[300px]">
         <div class="container max-w-screen-xl mx-auto relative">
             <div class="text-center sm:ml-auto sm:mr-10 sm:w-8/12">
                 <div class="font-belle text-mobile sm:text-2xl text-oldGreen-500 mb-14 sm:mb-10 font-medium italic">
@@ -158,9 +160,8 @@
     </div>
 
     <div class="isi-undangan">
-        <section class="h-screen flex items-center justify-center relative">
-            <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center"
-                style="background-image: url(./images/background/background.jpg);"></div>
+        <section class="h-screen flex items-center justify-center relative overflow-hidden">
+            <div class="absolute top-0 left-0 w-full h-screen bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/background.jpg);"></div>
             <div class="container max-w-screen-xl px-4 sm:px-0 mx-auto relative">
                 <div class="columns-1">
                     <div class="text-center bg-grey-50 rounded-3xl p-10 sm:p-20">
@@ -204,13 +205,16 @@
                     </div>
                 </div>
             </div>
-            <!-- <img src="images/background/buket-bunga-1.png" alt="bunga"
-                class="js-show-fadeInLeft absolute top-0 -left-4"> -->
+            <img src="images/background/buket-bunga-1.png" alt="bunga"
+                class="js-show-fadeInLeft absolute top-0 -left-10 sm:-left-20 w-[160px] sm:w-[400px]">
+            
+            <img src="images/background/buket-bunga-2.png" alt="bunga"
+                class="js-show-fadeInLeft absolute -bottom-[100px] sm:-bottom-[200px] -right-[70px] sm:-right-[140px] w-[180px] sm:w-[400px]">
         </section>
     </div>
 
     <div class="isi-undangan">
-        <section class="js-show-fadeIn w-full h-[480px] sm:h-[750px] relative">
+        <section class="js-show-fadeIn w-full h-[480px] sm:h-[750px] relative overflow-hidden">
             <div class="absolute top-0 left-0 w-full h-[480px] sm:h-[750px] object-cover bg-no-repeat bg-cover bg-center"
                 style="background-image: url('images/background/bg-countdown.jpg');">
             </div>
@@ -236,6 +240,8 @@
                     </div>
                 </div>
             </div>
+            <img src="images/background/buket-bunga-2.png" alt="bunga"
+                class="js-show-fadeInLeft absolute -top-[145px] sm:-top-[346px] -right-[70px] sm:-right-[140px] w-[180px] sm:w-[400px]">
         </section>
     </div>
 
@@ -317,8 +323,7 @@
 
     <div class="isi-undangan">
         <section class="h-full sm:h-screen flex items-center justify-center relative py-10 sm:py-36">
-            <div class="absolute top-0 left-0 w-full h-full sm:h-screen bg-no-repeat bg-cover bg-center"
-                style="background-image: url(./images/background/background.jpg);"></div>
+            <div class="absolute top-0 left-0 w-full h-full sm:h-screen bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/background.jpg);"></div>
             <div class="container max-w-screen-xl px-4 sm:px-0 mx-auto relative">
                 <div class="columns-1">
                     <div class="text-center mb-6 sm:mb-14">
@@ -361,12 +366,13 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div>            
+            <div class="absolute bottom-0 left-0 w-full h-[50px] sm:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-atas.png);"></div>
         </section>
     </div>
 
     <div class="isi-undangan">
-        <section class="flex items-center justify-center relative py-6 sm:py-32">
+        <section class="flex items-center justify-center relative bg-paper-100 py-2 sm:py-12">
             <div class="container max-w-screen-xl px-4 sm:px-0 mx-auto">
                 <div class="columns-1">
                     <iframe src="https://www.youtube.com/embed/1-GLrbJzG3A" class="w-full aspect-video"
@@ -379,9 +385,9 @@
     </div>
 
     <div class="isi-undangan">
-        <section class="js-show-fadeIn py-6 sm:py-10 w-full h-full sm:h-screen flex items-center justify-center relative">
-            <div class="absolute top-0 left-0 w-full h-full sm:h-screen bg-no-repeat bg-cover bg-center"
-                style="background-image: url(./images/background/background.jpg);"></div>
+        <section class="js-show-fadeIn pb-6 sm:pb-10 pt-20 sm:pt-32 w-full h-full sm:h-screen flex items-center justify-center relative">
+            <div class="absolute top-0 left-0 w-full h-full sm:h-screen bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/background.jpg);"></div>             
+            <div class="absolute top-0 left-0 w-full h-[50px] sm:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-bawah.png);"></div>
             <div class="container max-w-screen-xl px-4 sm:px-0 mx-auto relative">
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 bg-grey-50 rounded-3xl p-6  sm:p-10">
                     <div class="js-show-fadeInUp relative mb-6 sm:mb-0">
@@ -530,7 +536,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>         
         </section>
     </div>
 
@@ -601,16 +607,16 @@
     </div>
 
     <div class="isi-undangan">
-        <section class="w-full h-[300px] sm:h-[500px] flex items-center justify-center relative">
-            <div class="absolute top-0 left-0 w-full h-[300px] sm:h-[500px] bg-no-repeat bg-cover bg-top"
-                style="background-image: url(./images/background/background.jpg);"></div>
+        <section class="w-full h-[300px] sm:h-[500px] flex justify-center relative">
+            <div class="absolute top-0 left-0 w-full h-[300px] sm:h-[500px] bg-no-repeat bg-cover bg-top" style="background-image: url(./images/background/background.jpg);"></div>
             <div class="container max-w-screen-xl relative flex justify-center mx-auto ">
-                <div class="columns-1 sm:w-2/4">
+                <div class="columns-1 sm:w-2/4 pt-10">
                     <div>
                         <img src="images/background/bunga-kabar.png" alt="" class="w-6/12 mx-auto">
                     </div>
                 </div>
-            </div>
+            </div>            
+            <div class="absolute bottom-0 left-0 w-full h-[50px] sm:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-atas-2.png);"></div>
         </section>
     </div>
 
@@ -618,7 +624,8 @@
         <section class="w-full h-80 sm:h-screen flex items-end justify-center relative bg-no-repeat bg-cover bg-center"
             style="background-image: url(./images/background/bg-footer.jpg);">
             <div class="absolute top-0 left-0 w-full h-80 sm:h-screen opacity-60"
-                style="background-image: linear-gradient(180deg, #FFFFFF00 0%, #171717 100%);"></div>
+                style="background-image: linear-gradient(180deg, #FFFFFF00 0%, #171717 100%);"></div>            
+            <div class="absolute top-0 left-0 w-full h-[50px] sm:h-[100px] bg-no-repeat bg-cover bg-center" style="background-image: url(./images/background/bg-paper-bawah-2.png);"></div>
         </section>
     </div>
 
